--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Of course! Here's the README in markdown format for you to copy and paste:
+
+```markdown
 # WhatCanWePlayToday
 
 A game recommendation platform for Steam users, designed to help groups of friends find new games to play together.
@@ -18,28 +21,29 @@ A game recommendation platform for Steam users, designed to help groups of frien
 ### Prerequisites
 
 - Node.js
+- MongoDB
 
 ### Installation
 
 1. Clone the repository:
-   ```bash
-   git clone https://github.com/YukioRivera/WhatCanWePlayToday.git
-   ```
+```
+git clone https://github.com/YukioRivera/WhatCanWePlayToday.git
+```
 
 2. Navigate to the project directory:
-   ```bash
-   cd WhatCanWePlayToday
-   ```
+```
+cd WhatCanWePlayToday
+```
 
 3. Install the required dependencies:
-   ```bash
-   npm install
-   ```
+```
+npm install
+```
 
 4. Start the server:
-   ```bash
-   npm start
-   ```
+```
+npm start
+```
 
 5. Open a web browser and navigate to `http://localhost:3000` to access the application.
 
@@ -50,3 +54,6 @@ Feedback is always welcome! If you'd like to contribute to the project, please f
 ## License
 
 This project is licensed under the MIT License.
+```
+
+You can copy the above content and paste it into your README.md file on GitHub.
